--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "npm": "^6.4.0",
     "rxjs": "^6.0.0",
+    "sweetalert": "^2.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
