switched over to scss due to need for some convenient logic in css, namely rule nesting and parent targeting

--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,10 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -125,5 +125,10 @@
       }
     }
   },
-  "defaultProject": "booking-app"
+  "defaultProject": "booking-app",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
