--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "npm": "^6.4.0",
     "rxjs": "^6.0.0",
     "sweetalert": "^2.1.0",
