--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "npm": "^6.4.0",
     "rxjs": "^6.0.0",
+    "socket.io-client": "^2.1.1",
     "sweetalert": "^2.1.0",
     "zone.js": "~0.8.26"
   },
