--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/gapi": "0.0.36",
+    "@types/gapi.auth2": "0.0.47",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
